added requests and more web