@@ -1,28 +1,9 @@
 package service;
 
-import java.nio.charset.StandardCharsets;
-import java.security.NoSuchAlgorithmException;
-
-import javax.crypto.*;
-
-import com.sun.mail.util.BASE64DecoderStream;
-import com.sun.mail.util.BASE64EncoderStream;
+import java.util.Base64;
 
 public class EncryptionService {
     private static final EncryptionService encryptionServiceinstance = new EncryptionService();
-    private static Cipher ecipher;
-    private static Cipher dcipher;
-    private static SecretKey key;
-
-    static {
-        try {
-            ecipher = Cipher.getInstance("DES");
-            dcipher = Cipher.getInstance("DES");
-            key = KeyGenerator.getInstance("DES").generateKey();
-        } catch (NoSuchAlgorithmException | NoSuchPaddingException e) {
-            e.printStackTrace();
-        }
-    }
 
     private EncryptionService() {}
 
@@ -31,32 +12,12 @@ public class EncryptionService {
     }
 
     public String encrypt(String str) {
-        try {
-            ecipher.init(Cipher.ENCRYPT_MODE, key);
-
-            byte[] utf8 = str.getBytes(StandardCharsets.UTF_8);
-            byte[] enc = ecipher.doFinal(utf8);
-
-            enc = BASE64EncoderStream.encode(enc);
-
-            return new String(enc);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        return null;
+        return Base64.getEncoder().withoutPadding().encodeToString(str.getBytes());
     }
 
     public String decrypt(String str) {
-        try {
-            dcipher.init(Cipher.DECRYPT_MODE, key);
+        byte[] decodedBytes = Base64.getDecoder().decode(str);
 
-            byte[] dec = BASE64DecoderStream.decode(str.getBytes());
-            byte[] utf8 = dcipher.doFinal(dec);
-
-            return new String(utf8, StandardCharsets.UTF_8);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        return null;
+        return new String(decodedBytes);
     }
 }
